<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chinese Checkers</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_offline_configuration">OfflineConfigurationActivity</string>
    <string name="title_activity_offline_game">OfflineGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_offline">Play Offline</string>
    <string name="offline">Offline</string>
    <string name="offline_start_game">Start Game</string>
    <string name="offline_move_done">Done</string>
    <string name="offline_move_reset">Reset</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="network_unavailable">Network currently unavailable</string>
    <string name="connect_to_edit_username">Please connect to change your username.</string>
    <string name="waiting_title_bar">Waiting for players...</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dapibus feugiat ullamcorper. Fusce lacinia tellus ac tortor dignissim molestie vel eu augue. Donec porttitor quis tellus vitae tristique. Duis aliquet laoreet fermentum. Ut vitae tempus sapien, quis pulvinar magna. Quisque congue eros at sapien sollicitudin, ut pretium ipsum placerat. Morbi euismod aliquam auctor. Nullam ac congue purus. Pellentesque ultricies mollis sollicitudin.</string>
    <string name="ai_easy">Easy</string>
    <string name="ai_medium">Medium</string>
    <string name="ai_hard">Hard</string>

    <string name="offline_resume_title">Game in progress</string>
    <string name="offline_resume_message">Would you like to continue the saved game?</string>
    <string name="offline_resume_accept">Resume</string>
    <string name="offline_resume_decline">Quit</string>

    <string name="offline_end_game_title">Game Over</string>
    <string name="offline_end_game_message">Would you like to play a new game?</string>
    <string name="offline_end_game_accept">New Game</string>
    <string name="offline_end_game_decline">Home</string>

    <string name="play_online">Play Online</string>
    <string name="online">Online</string>
    <string name="online_new_game">New Game</string>
    <string name="online_games">Online Games</string>
    <string name="waiting_for_players">Waiting for players...</string>
    <string name="settings_show_possible_moves">Show possible moves</string>
    <string name="settings_your_username">Your username</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>

    <!-- Help section FAQ-->
    <string name="help_question_1">How do I start a game by myself or with friends?</string>
    <string name="help_answer_1">Tap the Offline button on the main menu. This will bring you to a second screen where you can set up your game. Four buttons at the top of the screen allow you to change the number of players, including yourself and computer controlled players, or AI. By default, only the first player is set to human. You can enter your name in the text box, and tap the buttons on the others to change the AI difficulty. You can change the AI players to humans by tapping the picture of a robot to the right of each set of difficulty buttons. Tap Start Game to begin. At the end of each turn, pass the game to the next player.</string>
    <string name="help_question_2">How do I play?</string>
    <string name="help_answer_2">Once you have a game started, tap one of your game pieces. The spaces you can move it to will be highlighted. Tap one of these spaces to move your piece. If the piece can be used to hop another, it may do so multiple times, even if you started by moving it one space. You can click Reset to move it back, or tap Done to end your turn. If you tap Done without moving a piece, you will skip your turn. To win, move all your pieces into the opposite corner before your opponents do the same. If an opponent is blocking any of your goal spaces, filling the rest will count as a win.</string>
    <string name="help_question_3">Can I watch a game to see how it\'s played?</string>
    <string name="help_answer_3">Yes. Just tap the Offline button, tap the first player\'s human icon to change it to an AI, and then tap Start Game. Watch and learn.</string>
    <string name="help_question_4">Why do I have a username?</string>
    <string name="help_answer_4">This name is used for online games. This is the name other users will see when you play online. You can change it anytime your device is connected to the Internet by entering a new one in the settings menu.</string>
    <string name="help_question_5">How do I start a game over the Internet?</string>
    <string name="help_answer_5">Tap the Online button on the main menu. This will bring you to a second screen that lists your online games in progress. To start a new one, click the New Game button at the bottom of the screen. You can then select the number of players by tapping one of the buttons that appear. After a short time, the game will begin. If enough players are not found, AI players will be used to fill the game.</string>
    <string name="help_question_6">I got a notification telling me it\'s my turn. How do I take my turn?</string>
    <string name="help_answer_6">Tap the Online button, and then tap the game with an arrow next to it on the list.</string>
    <string name="help_question_7">How do I leave an online game?</string>
    <string name="help_answer_7">Tap the Online button, then press and hold the game you want to leave. You will be asked if you want to quit it. Tap Yes. You will be replaced by an AI, so the other players can keep playing.</string>
    <string name="settings_sound_effects">Sound Effects</string>
    <string name="settings_backgound_music">Background Music</string>

</resources>
