<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.brocku.chinesecheckers.OfflineGameActivity$OfflineGameFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@color/black"
        android:textSize="@dimen/activity_large_text_size"
        android:singleLine="true"
        android:text="@string/waiting_title_bar"
        android:id="@+id/offlineCurrentPlayerTextView" />

    <!--
        Uncomment next section and comment out the
        SurfaceView to see demo image used in mockups
    -->

    <!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:src="@drawable/demo_game"
        android:layout_gravity="center_horizontal"
        android:id="@+id/logo"
        android:layout_below="@+id/offlineCurrentPlayerTextView"
        android:layout_above="@+id/offlinePlayerControlsLayout" />
    -->

    <ca.brocku.chinesecheckers.uiengine.GameBoardUiView
        android:id="@+id/gameBoardSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/offlineCurrentPlayerTextView"
        android:layout_above="@+id/offlinePlayerControlsLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/offlinePlayerControlsLayout">

        <Button
            android:padding="15dp"
            android:background="@drawable/chch_button_square_red"
            android:textSize="@dimen/activity_xlarge_text_size"
            android:textAllCaps="true"
            android:gravity="right|center_horizontal"
            android:drawableLeft="@drawable/ic_action_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offline_move_reset"
            android:id="@+id/offlineMoveResetButton"/>

        <Button
            android:padding="15dp"
            android:background="@drawable/chch_button_square_green"
            android:textSize="@dimen/activity_xlarge_text_size"
            android:textAllCaps="true"
            android:gravity="right|center_horizontal"
            android:drawableLeft="@drawable/ic_action_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offline_move_done"
            android:id="@+id/offlineMoveDoneButton"/>

    </LinearLayout>

</RelativeLayout>
